--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@antv/g6": "^1.2.0",
+    "@antv/g6-plugins": "^1.0.0",
     "axios": "^0.17.1",
     "install": "^0.10.2",
     "npm": "^5.5.1",
